--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <title>Plane scene</title>
   </head>
   <body>
-    <model-viewer id="modelViewer" ar shadow-intensity="1" camera-controls touch-action="pan-y"> </model-viewer>
-    <audio id="sceneAudio"></audio>
+    <model-viewer id="modelViewer" src="BB8.glb" ar-placement="floor" ar shadow-intensity="1" camera-controls touch-action="pan-y"> </model-viewer>
 
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
-    <script src="./src/main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
